--- a/css/shouye.css
+++ b/css/shouye.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+a{
+    text-decoration: none;
+    list-style: none;
+    color: #333333;
+}
 ul,li{
     list-style: none;
 }
@@ -200,6 +205,7 @@ body{
     flex-wrap: wrap;
 }
 .kuan li{
+    float: left;
     width: 45%;
     height: 2.8rem;
     margin: 0.09rem;
@@ -228,4 +234,51 @@ body{
     font-size: .12rem;
     color: #a2a2a2;
     margin-top: .07rem;
+}
+/* 切换 */
+.heng{
+    width: 100%;
+    display: none;
+}
+.heng li{
+    width: 100%;
+    height: 1rem;
+    border-bottom: 1px solid #999999;
+}
+.pad{
+    display: block;
+    width: 100%;
+    margin-top: .1rem;
+    margin-left: .1rem;
+    display: flex;
+}
+.pic2 img{
+    width: .8rem;
+    height: .8rem;
+}
+.all2{
+    width: 2.63rem;
+    margin-left: .1rem;
+}
+.wenzi2{
+    width: 2.63rem;
+    height: .42rem;
+    font-size: .12rem;
+    line-height: .19rem;
+}
+.pirce2{
+    width: 2.63rem;
+    line-height: .19rem;
+    color: red;
+    font-size: .12rem;
+
+}
+.all3{
+    width: 2.63rem;
+    font-size: .12rem;
+    color: #a2a2a2;
+    margin-top: .07rem;
+}
+.one1{
+    margin-right: .1rem;
 }
